[package]
name = "tf-provider-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
ctrlc = "3.4.5"
hyper-util = "0.1.7"
prost = "0.13"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tonic = "0.12.2"
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build = { version = "0.12.2", features = ["prost"] }
